# mops

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PROMPT.md  RALPH_IMPLEMENT.md  README.md  ralph.sh
.beads/: issues.jsonl
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
docs/plans/: 2026-01-10-element-library-design.md  2026-01-10-mops-initial-design.md  2026-01-10-python-api-design.md  2026-01-10-solver-integration-design.md  2026-01-11-hdf5-results-format-spec.md  2026-01-11-nafems-benchmarks-spec.md  2026-01-11-query-dsl-spec.md  2026-01-12-hex8-shear-locking-remediation.md  2026-01-13-fea-conformance-spec.md  2026-01-24-fea-conformance-test-index.md
docs/research/: beads.md  ralph.md
docs/user-guide/: elements.md  getting-started.md  installation.md  queries.md  results.md  visualization.md
examples/: README.md  cantilever_beam.py  gate_column_analysis_standalone.py  gate_column_wind_analysis.py  plate_with_hole.py  simple_tensile_bar.py
fea-conformance/: INDEX.md  README.md
fea-conformance/tests/shell-classics/: scordelis-lo-roof.md
mops-core/: Cargo.toml
mops-core/src/: assembly.rs  element.rs  error.rs  lib.rs  material.rs  mesh.rs  solver.rs  sparse.rs  stress.rs  types.rs
mops-core/src/element/: axisymmetric.rs  gauss.rs  hex20.rs  hex8.rs  hex8_bbar.rs  hex8_sri.rs  plane_strain.rs  plane_stress.rs  quad8.rs  tet10.rs  tet4.rs  tri6.rs
mops-python/: README.md  pyproject.toml
mops-python/rust/: Cargo.toml
mops-python/rust/src/: lib.rs
mops-python/src/mops/: __init__.py  _core.pyi  derived.py  loads.py  mesh.py  model.py  query.py  results.py  viz.py
mops-python/tests/: __init__.py  conftest.py  test_basic.py
mops-python/tests/integration/: __init__.py  test_pipeline.py  test_pressure_loads.py  test_tet10_solve.py
mops-python/tests/unit/: __init__.py  test_2d_elements.py  test_components.py  test_derived.py  test_dof_constraints.py  test_elements.py  test_faces.py  test_field_accessors.py  test_geometric_queries.py  test_mesh.py  test_multi_material.py  test_results.py  test_stress.py  test_topological_queries.py  test_viz.py
mops-python/tests/verification/: test_cantilever.py  test_cooks_membrane.py  test_nafems_le1.py  test_nafems_le10.py  test_patch.py  test_plate_hole.py  test_thick_cylinder.py
